--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <body><meta charset="utf-8"><script>
 
 ///////////////////////////////////////////////////////////////////////////////
-// 1Keys - A 1 Kilobyte JavaScript Demo for JS1024 by Frank Force 2020
-
-// This file is a cleaned up version
-// Use index.premin.html to minify
+// 1Keys - A 1 Kilobyte JavaScript Piano
+// By Frank Force 2020
+// https://github.com/KilledByAPixel/1Keys
 
 C = new AudioContext; // create audio context
 
