--- a/index.premin.html
+++ b/index.premin.html
@@ -1,14 +1,17 @@
 <body><meta charset="utf-8"><script>
 
 ///////////////////////////////////////////////////////////////////////////////
-// 1Keys - A 1 Kilobyte JavaScript Demo for JS1024 by Frank Force 2020
+// 1Keys - A 1 Kilobyte JavaScript Piano
+// By Frank Force 2020
+// https://github.com/KilledByAPixel/1Keys
 
 // How to minify...
-// 1. Terser
-// 2. Replace " with `
-// 3. Regpack
-// 4. Replace " with B (or any unused character)
-// 5. Put it in <body onload="">
+// 1. This file has some tweaks to help with compression
+// 2. Remove white space, Terser recommended
+// 3. Replace " with `
+// 4. Regpack with default settings
+// 5. Replace " with B (or any unused character)
+// 6. Put it in <body onload="">
 
 C = new AudioContext; // create audio context
 
