--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body><meta charset="utf-8"><script>
+<body><meta charset=utf-8><script>
 
 ///////////////////////////////////////////////////////////////////////////////
 // 1Keys - A 1 Kilobyte JavaScript Piano
