--- a/index.premin.html
+++ b/index.premin.html
@@ -30,18 +30,18 @@ for( I = i = 0;      // default instrument
         A = [], i++) // init sounds
         
     document.body.innerHTML +=
-        `${i%12 ? `` : `<br>`                                      // new row
-        }<div id=K${                                               // create key
-            24 + i%12 - (i/12|0)*12                                // reorder keys
-        } style=display:inline-block;margin:2;background:${        // key style
-        `02579`.indexOf( i%12 - 1 ) < 0 ?                          // b or w
-        `#fff;width:60;height:180` :                               // white
-        `#000;position:absolute;margin-left:-17;width:33;height:99`// black
-        } onmouseover=event.buttons&&P(${ 24 + i%12 - (i/12|0)*12  // mouse over
-        }) onmousedown=P(${ 24 + i%12 - (i/12|0)*12                // mouse down
-        }) onmouseup=X(${ 24 + i%12 - (i/12|0)*12                  // mouse up
-        }) onmouseout=X(${ 24 + i%12 - (i/12|0)*12                 // mouse out
-        })>`;                                                      // end key
+        `${i%12 ? `` : `<br>`                                       // new row
+        }<div id=K${                                                // create key
+            24 + i%12 - (i/12|0)*12                                 // reorder keys
+        } style=display:inline-block;margin:2;background:${         // key style
+        `02579`.indexOf( i%12 - 1 ) < 0 ?                           // b or w
+        `#fff;width:60;height:180` :                                // white
+        `#000;position:absolute;margin-left:-17;width:33;height:99` // black
+        } onmouseover=event.buttons&&P(${ 24 + i%12 - (i/12|0)*12   // mouse over
+        }) onmousedown=P(${ 24 + i%12 - (i/12|0)*12                 // mouse down
+        }) onmouseup=X(${ 24 + i%12 - (i/12|0)*12                   // mouse up
+        }) onmouseout=X(${ 24 + i%12 - (i/12|0)*12                  // mouse out
+        })>`;                                                       // end key
 
 ///////////////////////////////////////////////////////////////////////////////
 // sound
@@ -67,7 +67,8 @@ P = i=> i < 0 || A[i] || // is note not playing
             g.gain.value = 0,                  // set gain to 0
             C.currentTime + .02),              // set start time
         g.gain.linearRampToValueAtTime(        // set gain start ramp
-            .2/(1+Math.log2(j)), C.currentTime + .05), // ramp on gain
+            .2/(1+Math.log2(j)),               // scale gain
+            C.currentTime + .05),              // ramp on gain
         o.start(                               // play sound
             eval(`K`+i).style.transition = eval(`K`+i).innerText), // reset transitions
         o)                                     // return sound
