--- a/index.premin.html
+++ b/index.premin.html
@@ -13,10 +13,11 @@
 // 5. Replace " with B (or any unused character)
 // 6. Put it in <body onload="">
 
-C = new AudioContext; // create audio context
-
 // body style
 document.body.style = `background:#112;color:#fff;user-select:none;text-align:center`;
+
+// create audio context
+C = new AudioContext;
 
 // instrument select
 [...`∿🎷🎹`].map((i,j)=>                                  // instrument icons
