--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>1Keys 🎹 A Tiny JavaScript Piano</title>
+<title>1Keys 🎹 Tiny JS Piano</title>
 <meta charset=utf-8>
 <span id=J style=font-size:20></span>
 <body style=background:#112;color:#fff;user-select:none;text-align:center>
