--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ P = i=> i < 0 || A[i] || // is valid and note not playing
 
     A[i] = [         // instruments
         [...`1248`], // 🎹 organ
-        [...`3579`], // 🎷 woodwind
+        [...`3579`], // 🎷 brass
         [...`123`],  // 🎻 strings
         [3],         // ∿ sine
     ][ I ].map(j=>(
