--- a/index.premin.html
+++ b/index.premin.html
@@ -52,7 +52,7 @@ P = i=> i < 0 || A[i] || // is valid and note not playing
 (
     A[i] = [         // instruments
         [...`1248`], // 🎹 organ
-        [...`3579`], // 🎷 woodwind
+        [...`3579`], // 🎷 brass
         [...`132`],  // 🎻 strings
     ][ I ].map(j=>(
         o = C.createOscillator(                // create oscillator
