--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Shape <select id=S>
 <br><script>
 
 ///////////////////////////////////////////////////////////////////////////////
-// 1Keys - A 1 Kilobyte JavaScript Piano
+// 1Keys - A 1 Kilobyte JavaScript Piano - Enhanced Version
 // By Frank Force 2020
 // https://github.com/KilledByAPixel/1Keys
 
