--- a/index.premin.html
+++ b/index.premin.html
@@ -9,7 +9,7 @@
 // 1. This file has some tweaks to help with compression
 // 2. Remove white space, Terser recommended
 // 3. Replace " with `
-// 4. Regpack with default settings
+// 4. Regpack
 // 5. Replace " with B (or any unused character)
 // 6. Put it in <body onload="">
 
