--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ P = i=> i < 0 || A[i] || // is valid and note not playing?
         [...`1248`], // 🎹 organ
         [...`3579`], // 🎷 brass
         [...`123`],  // 🎻 strings
-        [4],         // ∿ sine
+        [...`4`],    // ∿ sine
     ][ I ].map(j=>(
         o = C.createOscillator(),                 // create oscillator
         o.connect(                                // oscillator to gain1
