--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>1Keys 🎹 Tiny JS Piano</title>
 <meta charset=utf-8>
-<body style=background:#112;color:#fff;user-select:none;text-align:center>
+<body id=B style=background:#112;color:#fff;user-select:none;text-align:center>
 <span id=K style=font-size:20></span>
 Octave <input type=number id=O style=width:40 value=0 min=-3 max=3 onkeydown='return false'>&nbsp;
 Key <input type=number id=Y style=width:40 value=0 min=-12 max=12 onkeydown='return false'>&nbsp;
@@ -39,7 +39,7 @@ I = 0;                // instrument type
 // piano keys
 for( i = 0; i < 36; i++) // 3 x 12 keys
         
-    document.body.innerHTML +=
+    B.innerHTML +=
         `${i%12 ? `` : `<br>`                                       // new row
         }<div id=K${                                                // create key
             k = 24 + i%12 - (i/12|0)*12                             // reorder keys
